# miraya

./: .gitignore
.github/workflows/: unit-testing.yml
src/: main.cpp  mainwindow.cpp  mainwindow.h  twitchcommandhandler.cpp  twitchcommandhandler.h
src/about/: about.cpp  about.h
src/backup/: backup.cpp  backup.h
src/commands/: commandswindow.cpp  commandswindow.h
src/osu/api/: osuapi.cpp  osuapi.h
src/osu/api/auth/: clientCredentialsFlow.cpp  clientCredentialsFlow.h
src/osu/data/gosu/: gosumemoryclient.cpp  gosumemoryclient.h  gosumemorydatawrapper.cpp  gosumemorydatawrapper.h
src/osu/irc/: osuircclient.cpp  osuircclient.h
src/preferences/: preferences.cpp  preferences.h
src/services/streaming/: streamingServiceDataWrapper.h
src/services/streaming/twitch/: twitchClient.cpp  twitchClient.h  twitchdatawrapper.cpp  twitchdatawrapper.h
src/setupwizard/: setupwizard.cpp  setupwizard.h
src/skinsurl/: skinsurl.cpp  skinsurl.h
src/theme/: theme.cpp  theme.h
src/updater/: updater.cpp  updater.h  updaterurls.h  version.cpp  version.h
src/utils/: utils.cpp  utils.h
tests/: CMakeLists.txt
tests/about/: CMakeLists.txt  test_about.cpp
tests/updater/version/: CMakeLists.txt  test_updater_version.cpp
tests/utils/: CMakeLists.txt  test_utils.cpp
